# eis_test

./: .flake8  .gitignore  Dockerfile  pyproject.toml  readme.md
.github/workflows/: main.yaml
src/: exeptions.py  main.py
src/domain/: models.py  tender_finder.py
src/infrastructure/: settings.py  tender_finder.py
src/infrastructure/celery/: app.py
src/service/: tender_finder.py
src/service/tasks/: __init__.py  url_parce.py  xml_parce.py
tests/data/: page_with_tender.html  viewXml.html.xml
tests/unit/: test_page_tender_parser.py  test_tender_parser.py
