[project]
name = "eic-parcer"
version = "0.1.0"
description = ""
authors = [
    {name = "vlad",email = "vlad.shirobockow@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "celery (>=5.4.0,<6.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
mypy = "^1.15.0"
pytest = "^8.3.5"
isort = "^6.0.1"
